On registration form, fixed align of labels

--- a/app/assets/stylesheets/section/register.scss
+++ b/app/assets/stylesheets/section/register.scss
@@ -51,8 +51,10 @@ body {
               overflow: hidden;
 
               label {
+                color: #0f1714;
                 display: inline-block;
                 width: 140px;
+                line-height: 33px;
                 text-align: right;
                 font-weight: bold;
                 float: left;
@@ -112,6 +114,11 @@ body {
                   a {
                     color: #000;
                   }
+                }
+              }
+              &.password {
+                label {
+                  line-height: 22px;
                 }
               }
             }
